results/cppcheck-output.txt
Checking src/publisher.cpp ...
src/publisher.cpp:52:47: error: No pair for character ("). Can't process file. File is either invalid or unicode, which is currently not supported. [syntaxError]
      RCLCPP_ERROR_STREAM(this->get_logger(), "Error encountered at time of
                                              ^
1/3 files checked 52% done
Checking src/server_client.cpp ...
src/server_client.cpp:8:0: information: Include file: "beginner_tutorials/srv/change_string.hpp" not found. [missingInclude]

^
src/server_client.cpp:9:0: information: Include file: "rclcpp/rclcpp.hpp" not found. [missingInclude]

^
2/3 files checked 80% done
Checking src/subscriber.cpp ...
src/subscriber.cpp:4:0: information: Include file: "rclcpp/rclcpp.hpp" not found. [missingInclude]

^
src/subscriber.cpp:5:0: information: Include file: "std_msgs/msg/string.hpp" not found. [missingInclude]

^
3/3 files checked 100% done
